# dao-governance

./: .env.example  .gitignore  LICENSE  README.md  bitnodes_monthly_timestamps.csv  ens_stats_table.tex  h4_empirical_task.tex  pyproject.toml  reg_comment_did.dta
data/: discussion_links.pkl  ens_stats_table.tex  ens_summary.csv  senti_res.json
dec-index-codes/: ImprovementProposals.ipynb  RefClients.ipynb
figures/: .$timeline.drawio.bkp  timeline.drawio
governenv/: constants.py  defillama.py  etherscan.py  graphql.py  instructions.py  llm.py  prompts.py  queries.py  settings.py  utils.py
scripts/: ens_authors.py  ens_fetch_html.py  ens_hhi.py  ens_hhi_senti_stats.py  ens_process_html.py  ens_process_identify_html.py  ens_process_sentiment.py  ens_snapshot_filter.py  ens_votes.py  ens_votes_HHI_senti.py  fetch.py  fetch_block_ts.py  fetch_defillama.py  fetch_delegation.py  fetch_delegations.py  fetch_discussion.py  fetch_html.py  fetch_http.py  fetch_improvementProposals.py  fetch_kaiko.py  fetch_kaiko_price.py  fetch_proposals.py  fetch_pullRequests.py  fetch_refClient_issues.py  fetch_refClient_pullRequests.py  fetch_spaces.py  fetch_statements.py  fetch_tally.py  fetch_transfer.py  fetch_ts_block.py  fetch_votes.py  filter_user.py  gpt_discussion.py  gpt_topic.py  label_country_iso.py  label_country_region.py  merge_car_delegation.py  merge_discussion.py  merge_sc_proposal_adj.py  merge_spaces_defillama_fees.py  (+55 more)
tables/: car_55_DAOTFE_stage_end.tex  car_55_DAOTFE_stage_start.tex  h4_feasibility.tex  reg_car_delegate_created.tex  reg_car_delegate_end.tex  reg_car_discussions_created.tex  reg_car_discussions_end.tex  reg_car_proposals_created.tex  reg_car_proposals_end.tex  reg_car_topic_created.tex  reg_car_topic_end.tex  reg_car_votes_created.tex  (+31 more)
token-tracker/: LICENSE  README.md  pyproject.toml
token-tracker/data_test/ENS/: ens_fetch_data.sh
token-tracker/data_test/ENS/time_series_data/: 0x839395e20bbB182fa440d08F850E6c7A8f6F0780.parquet  0xb8c2C29ee19D8307cb7255e1Cd9CbDE883A267d5.parquet
token-tracker/data_test/ENS/trueblocks_data/: 0x839395e20bbB182fa440d08F850E6c7A8f6F0780.csv  0x839395e20bbB182fa440d08F850E6c7A8f6F0780.json  0xb8c2C29ee19D8307cb7255e1Cd9CbDE883A267d5.csv  0xb8c2C29ee19D8307cb7255e1Cd9CbDE883A267d5.json
token-tracker/docs/: fetch_data_shell_script.md
token-tracker/token_tracker/abis/: ERC20_bytes32_abi.json
token-tracker/token_tracker/scripts/: process_transaction_logs.py  process_trueblocks_csv_to_json.py
token-tracker/token_tracker/shared/: common.py  constants.py  parsing.py
(+56 files in other folders)
