[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "governenv"
version = "0.0.1" 
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    'scipy',
    "requests",
    "matplotlib",
    "seaborn",
    "tqdm",
    "jellyfish",
    "dotenv",
    "web3",
    "stata_setup",
    "sklearn",
    "plotly",
    "nbformat",
    "kaleido",
]

[project.optional-dependencies]
dev = ["pylint"]