[tool.poetry]
name = "token-tracker"
version = "0.1.0"
description = "A project for tracking tokens on Ethereum."
authors = ["Magnus Hansson <hansson.carl.magnus@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^7.2.0"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.241009"
pyarrow = "^17.0.0"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
